# vato-cnvs

./: .gitattributes  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
.impeccable/: hook.cache.json
scripts/: setup-ci-secrets.sh
src/: App.tsx  index.css  main.tsx  pty.ts  store.ts  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/.impeccable/: hook.cache.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_sessions.rs  lib.rs  main.rs  pty.rs  stt.rs
src/.impeccable/: hook.cache.json
src/autocomplete/: attachAutocomplete.ts  caret.ts  engine.ts  lexicon.ts
src/canvas/: Canvas.tsx  ExcalidrawCanvas.tsx  canvasState.ts  dragState.ts  sceneFiles.ts  selectionState.ts  shortcuts.ts  tiling.ts  useWindowMarquee.ts
src/data/: backgrounds.ts  clis.tsx  names.ts
src/hooks/: useAttentionWatch.ts  useTerminal.ts
src/i18n/: index.ts
src/lib/: attention.ts  attnLog.ts  autoUpdate.ts  bus.ts  clipboard.ts  notify.ts  perf.ts  platform.ts  reveal.ts  sessionCapture.ts
src/panes/: BrowserPane.tsx  NotesPane.tsx  TerminalPane.tsx
src/ui/: BackgroundLayer.tsx  BroadcastBar.tsx  ControlCenter.tsx  Dropdown.tsx  FolderPicker.tsx  GridOverview.tsx  LeftToolbar.tsx  NewWorkspaceDialog.tsx  Onboarding.tsx  ResumeDialog.tsx  SettingsPanel.tsx  ShapeStylePanel.tsx  TitleBar.tsx  TopBar.tsx  VoiceBar.tsx  ZoomControl.tsx  icons.tsx  shapeStyle.ts  toolIcons.tsx
src/voice/: audio.ts  commands.ts  speak.ts  stt.ts  termAccess.ts  useVoice.ts  wake.ts
src/windows/: WindowFrame.tsx
