[package]
name = "vato-cnvs"
version = "0.1.0"
description = "Vato Canvas — multi-agent CLI cockpit"
authors = ["Vato"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22"
which = "7"
# HTTP client for downloading STT models/binaries. native-tls -> SChannel on
# Windows (no OpenSSL/ring C toolchain needed at build time). The bare
# `ureq::get` has no TLS backend with default-features off, so we build an Agent
# wired to an explicit native-tls connector (see stt.rs).
ureq = { version = "2", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
# Unzip the whisper.cpp Windows release (one-click binary install).
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.dev]
# Faster incremental builds during development.
incremental = true
