[package]
name = "vato-cnvs"
version = "0.1.4"
description = "Vato Canvas — multi-agent CLI cockpit"
authors = ["Vato"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22"
which = "7"
# HTTP client for the OpenAI calls (transcription + chat command interpreter).
# native-tls -> SChannel on Windows (no OpenSSL/ring C toolchain needed at build
# time). The bare `ureq::get` has no TLS backend with default-features off, so we
# build an Agent wired to an explicit native-tls connector (see stt.rs). `json`
# enables `send_json` for the chat proxy.
ureq = { version = "2", default-features = false, features = ["native-tls", "json"] }
native-tls = "0.2"
tauri-plugin-updater = "2.0.0-rc.4"
tauri-plugin-process = "2.0.0-rc.1"
# OS notifications: ping the user when an agent finishes / needs input / errors
# while the app is in the background (the attention router).
tauri-plugin-notification = "2"

# WebView2 plumbing — only used to turn off the browser accelerator keys
# (Ctrl+D/Ctrl+P/Alt…) that otherwise make Windows play its system "ding" when a
# shortcut reaches the WebView. Versions are pinned to match Tauri 2.11's own
# webview2-com/windows so the COM interface types are identical (no type clash).
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation"] }

[profile.dev]
# Faster incremental builds during development.
incremental = true
